Youtube notification backend and to be changed economy stuff